plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	// Ticket 003: análisis vía el Jenkinsfile del repo (withSonarQubeEnv
	// 'sonarqube-vm') -- mismo patrón que auth-core-mc/mail-core-mc.
	id 'org.sonarqube' version '7.4.0.8496'
	id 'jacoco'
}

group = 'com.galgothstudio'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		// Java 25 (LTS), no 21: ver docs/definiciones/galgoth-studio-mvp.md
		// Addendum -- corrección alineada con auth-core-mc (Spring Boot
		// 4.1.0 + Java 25, ya probado en Jenkins con Temurin 25 instalado).
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	// Ticket 025: Spring Boot 4.x separó el soporte de cliente HTTP
	// (RestClient/RestTemplate + su autoconfiguración, incluido el bean
	// `RestClient.Builder` que `ClaudeMessagesClient` necesita) del starter
	// de servidor MVC -- confirmado real: sin este starter, `RestClient.Builder`
	// simplemente no existe como bean y CUALQUIER `@SpringBootTest` (no solo
	// los de IA) falla al arrancar el contexto completo.
	implementation 'org.springframework.boot:spring-boot-starter-restclient'
	// Ticket 077: Resource Server de auth-core-mc — sin este starter, agregar
	// spring.security.oauth2.resourceserver.* no tiene efecto. Traído junto
	// con spring-boot-starter-security (no estaba en el proyecto hasta este
	// ticket) porque el DSL .oauth2ResourceServer(...) de HttpSecurity vive
	// en el starter de security propiamente, no en este.
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	// Ticket 023: MinIO (S3-compatible) para el pipeline de thumbnails --
	// el AWS SDK v2 S3 client funciona contra cualquier endpoint
	// S3-compatible (basta con apuntar `endpointOverride` a MinIO), sin
	// depender de un cliente propietario de MinIO.
	implementation platform('software.amazon.awssdk:bom:2.28.11')
	implementation 'software.amazon.awssdk:s3'
	// Ticket 004: valida MobProjectModel contra contracts/schemas/*.json
	// (draft 2020-12) -- se necesita en producción, no solo en test, ya
	// que la validación de invariantes vive en backend (Diseño técnico §5
	// de docs/definiciones/galgoth-studio-mvp.md).
	implementation 'com.networknt:json-schema-validator:1.5.6'
	// Ticket 020: Spring Boot 4 cambió su ObjectMapper autoconfigurado por
	// defecto a Jackson 3 (`tools.jackson.*`, paquete nuevo) -- los módulos
	// Vec3/Vec4 del ticket 004 están escritos contra la API clásica de
	// Jackson 2 (`com.fasterxml.jackson.*`), que ahora solo llega
	// transitivamente (vía json-schema-validator) SIN autoconfigurar un
	// bean ObjectMapper. `JacksonConfig` define ese bean a mano -- esta
	// dependencia le agrega soporte de `java.time.*` (Instant), que
	// Jackson 2 no trae por defecto. Ver hallazgo documentado en el Hecho
	// del ticket 020: falta evaluar una migración completa a Jackson 3
	// como ticket propio, fuera de alcance aquí.
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-flyway-test'
	// Ticket 084: primer test de controlador que necesita simular un JWT
	// autenticado (SecurityMockMvcRequestPostProcessors.jwt()) -- no lo
	// trajo el ticket 077 porque ninguna ruta exigía autenticación todavía.
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	// Ticket 023: MinIO real vía Testcontainers (aislado por corrida, igual
	// criterio que Postgres) -- nunca contra el MinIO local persistente de
	// docker/docker-compose.yml, que es solo para dev manual. Versión
	// fijada a mano -- el BOM de dependency-management de Spring Boot no
	// gestiona este módulo puntual de Testcontainers (a diferencia de
	// testcontainers-postgresql), así que sin versión explícita gradle no
	// puede resolverlo -- se usa la misma versión ya resuelta para los
	// demás módulos de Testcontainers (2.0.5) para mantener todo alineado.
	testImplementation 'org.testcontainers:testcontainers-minio:2.0.5'
	// Ticket 004: compara JSON semánticamente (0 == 0.0, sin importar el
	// tipo numérico Java exacto que produjo cada lado) para el round-trip
	// DTO Java -> JSON contra el fixture -- JsonNode.equals() por sí solo
	// distingue IntNode de DoubleNode, lo que rompería la comparación sin
	// aportar nada real (el JSON en sí no distingue "0" de "0.0").
	testImplementation 'org.skyscreamer:jsonassert:1.5.3'
	// Sondeo acotado sin Thread.sleep() crudo (Sonar S2925) -- ticket 029,
	// tests que esperan la finalización real de un pipeline asíncrono.
	testImplementation 'org.awaitility:awaitility:4.2.2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Ticket 020: `MobProjectModelValidator` necesita el JSON Schema en el
// classpath EN PRODUCCIÓN (no solo en tests, que hasta ahora lo leían
// con una ruta relativa `../contracts/schemas/...` -- válida solo desde
// el working directory de Gradle, nunca desde un JAR desplegado).
// `contracts/` es la fuente de verdad única (compartida con el
// frontend) -- se copia al classpath en vez de duplicarla a mano, para
// que nunca pueda quedar desincronizada del schema real.
tasks.named('processResources') {
	from('../contracts/schemas') {
		into 'schemas'
	}
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
	}
}

tasks.named('sonar') {
	dependsOn tasks.named('jacocoTestReport')
}

sonar {
	properties {
		property "sonar.projectKey", "galgoth-studio-backend"
		property "sonar.projectName", "galgoth-studio-backend"
		property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
	}
}
